labs/lab05/postgre.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  postgres
  labels:
    app: postgres-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: postgredb
          mountPath: "/var/lib/postgresql/data/"
      volumes:
      - name: postgredb 
        persistentVolumeClaim:
          claimName: pvc-postgre
