labs/lab05/redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  redmine
  labels:
    app: redmine-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redmine-app
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000 
          protocol: TCP
