labs/lab05/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres-app
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: redmine
spec:
  ports:
  - port: 8080
    targetPort: 3000
  selector:
    app: redmine-app
  type: ClusterIP
